# Dragon

./: .gitignore  ByDragon.ply  CMakeLists.txt  README.md  TODO.md  error.txt  imgui.ini  octree_pcd.ply  pcd.ply  poisson.ply
app/: CenterLine2Graph.cpp  CenterLine2SDF.cpp  CenterLine2SDFTest.cpp  CenterLine2SurfacePoints.cpp  CenterLineAgreeMesh.cpp  DragonView.cpp  DragonView2D.cpp  GaussCurvature.cpp  GenerateMinimalSurface.cpp  ImageToMesh.cpp  MeanCurvature.cpp  Mesh2Indicator.cpp  Mesh2SDFTest.cpp  NormalPCD2IndicatorTest.cpp  PoissonTest.cpp  RBFTest.cpp  ReadPLYMesh.cpp  SkeletonGraph2SDF.cpp  SpiderMan.cpp  VesselSegment.cpp  reference-ordered.txt  reference-unordered.txt
app/scripts/: .shape_recon_from_skeletongraph.sh.swp  ballpivoting_recon.py  evaluate_cm_ball.sh  evaluate_cm_ball_atm.sh  evaluate_cm_ball_cat08.sh  evaluate_cm_ball_deepvessel.sh  evaluate_cm_ball_imagecas.sh  evaluate_cm_ball_parse.sh  generate_mask_from_mesh.py  generate_mask_from_normalized_mesh.sh  graph_from_centers_imagecas.sh  graph_from_centers_imagecas_ot.sh  poisson_recon.py  shape_recon.sh  shape_recon_from_ball.sh  shape_recon_from_ball_atm.sh  shape_recon_from_ball_cat08.sh  shape_recon_from_ball_deepvessel.sh  shape_recon_from_ball_imagecas.sh  shape_recon_from_ball_parse.sh  shape_recon_from_centers_atm.sh  shape_recon_from_centers_cat08.sh  shape_recon_from_centers_deepvessel.sh  shape_recon_from_centers_imagecas.sh  shape_recon_from_centers_parse.sh  shape_recon_from_poisson_atm.sh  shape_recon_from_poisson_cat08.sh  shape_recon_from_poisson_deepvessel.sh  shape_recon_from_poisson_imagecas.sh  shape_recon_from_poisson_parse.sh  shape_recon_from_skeletongraph.sh  shape_recon_from_surfs_atm.sh  shape_recon_from_surfs_cat08.sh  shape_recon_from_surfs_deepvessel.sh  shape_recon_from_surfs_imagecas.sh  shape_recon_from_surfs_parse.sh  shape_recon_from_vcg_atm.sh  shape_recon_from_vcg_cat08.sh  shape_recon_from_vcg_deepvessel.sh  shape_recon_from_vcg_imagecas.sh  (+4 more)
src/Geometry/: BasicGeometry.cpp  BasicGeometry.h  BoundingBox.h  Curve.h  Parameterization.h
src/Geometry/Curve/: Bezier.h  CubicSpline.h  Curve.h  Subdivision.h
src/Geometry/Structure/: BoundingBox.h  Graph.cpp  Graph.h  HalfEdge.cpp  HalfEdge.h  KDTree.h  Octree.cpp  Octree.h  PointCloud.cpp  PointCloud.h  Voronoi2D.cpp  Voronoi2D.h
src/Geometry/TriangleMesh/: HalfEdge.cpp  HalfEdge.h  TriangleMesh.cpp  TriangleMesh.h
src/Geometry/TriangleMesh/Processing/: Curvature.cpp  Curvature.h  Decimation.cpp  Decimation.h  MeshParameterization.cpp  MeshParameterization.h  MinimalSurface.h  Simplification.cpp  Simplification.h  Smoothing.cpp  Smoothing.h  Subdivision.cpp  Subdivision.h
src/Geometry/trimesh/: HalfEdge.h  TriangleMesh.cpp  TriangleMesh.h
src/Geometry/trimesh/Processing/: Curvature.h  MinimalSurface.h  Processing.h
src/IO/: ConsoleColor.h  OBJManager.cpp  OBJManager.h  PLYManager.cpp  PLYManager.h
src/Reconstruction/: CubeHandler.cpp  CubeHandler.h  MarchingCube.cpp  MarchingCube.h  MarchingCubePredefined.h  Mesh2SDF.cpp  Mesh2SDF.h  Poisson.cpp  Poisson.error  Poisson.h  RBF.cpp  RBF.h  TSDFVoxel.h  VoxelCube.cpp  VoxelCube.h
src/Tool/: ColorMapping.cpp  ColorMapping.h  ColorTable.h  CppExtension.cpp  CppExtension.h  MultiThreads.h
src/Visualization/: Shader.cpp  Shader.h  Uniform.h  Visualizer.cpp  Visualizer.h  Visualizer2D.cpp  Visualizer2D.h  Window.cpp  Window.h
src/Visualization/Shaders/: draw_all.vert  draw_color.vert  draw_feedback.frag  draw_normal.vert  draw_point.vert  draw_triangle.vert  naive_color.frag
